# where-to-go

./: .dockerignore  .env.example  .gitignore  =0.2.0  docker-compose.yml  main.py  pyproject.toml  requirements.txt
backend/: alembic.ini
backend/alembic/: env.py
backend/alembic/versions/: 5030e0a1a962_initial_schema.py  d3e4f5a6b7c8_add_destination_column_and_tool_calls.py  f44c2394de4e_add_llm_call_tracking.py
backend/app/: dependencies.py  main.py
backend/app/agents/: __init__.py  graph.py
backend/app/core/: config.py  dependencies.py  lifespan.py  (+1 more)
backend/results/: rag_retrieval_results.csv
backend/scripts/: cost_analysis.py  generate_cost_report.py  ingest_rag_data.py  load_rag_data.py  test_rag_retrieval.py  verify_rag.py  verify_setup.py
backend/tests/: conftest.py  test_agent.py  test_auth.py  test_discord_webhook.py  test_rag.py  test_services.py  test_webhooks.py
data_processing/: README.md  config.py
data_processing/processors/: cleaner.py  feature_extractor.py  labeler.py
data_processing/scrapers/: tripadvisor_scraper.py  wikivoyage_scraper.py
data_processing/scripts/: 1_fetch_raw_data.py  2_clean_and_label.py  3_validate_dataset.py
data_processing/utils/: rate_limiter.py  validation.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css
ml/: README.md  evaluate.py  train.py
ml/notebooks/: 01_data_exploration.ipynb  02_feature_engineering.ipynb  03_model_comparison.ipynb
ml/pipelines/: classifier_pipeline.py
ml/results/: experiment_results.csv
(+51 files in other folders)
