[project]
name = "where-to-go"
version = "0.1.0"
description = "Smart Travel Planner with FastAPI, LangGraph, ML, RAG, and pgvector"
requires-python = ">=3.12,<3.13"
dependencies = [
    "fastapi==0.115.6",
    "uvicorn[standard]==0.34.0",
    "sqlalchemy[asyncio]==2.0.49",
    "asyncpg==0.30.0",
    "alembic==1.14.0",
    "pgvector==0.4.2",
    "pydantic[email]==2.13.3",
    "pydantic-settings==2.14.0",
    "python-jose[cryptography]==3.3.0",
    "passlib[bcrypt]==1.7.4",
    "python-multipart==0.0.20",
    "httpx==0.28.1",
    "tenacity==9.1.4",
    "structlog==24.4.0",
    "python-dotenv==1.2.2",
    "groq==0.37.1",
    "google-genai==1.73.1",
    "langchain==0.3.28",
    "langchain-core>=0.3.73,<1.0.0",
    "langchain-community==0.3.31",
    "langchain-groq>=0.2.0,<1.0.0",
    "langgraph>=0.2.68,<1.0.0",
    "langsmith>=0.1.95",
    "numpy>=2.0,<3.0",
    "pandas==2.2.3",
    "scikit-learn==1.6.1",
    "joblib==1.4.2",
    "sentence-transformers==3.4.0",
    "beautifulsoup4>=4.12.0",
    "openai>=2.33.0",
]

[dependency-groups]
dev = [
    "pytest==8.3.4",
    "pytest-asyncio==0.25.2",
]
